[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = "0.3"
tracing = "0.1.41"
hyper = "1.6.0"
