[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
tracing = "0.1.41"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = "0.4"
headers = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
http-body = "1.0.1"
http-body-util = "0.1"

